# Generated by Django 6.0.4 on 2026-05-27 22:02

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auctioneer', '0001_initial'),
        ('user', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Auction',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=50, verbose_name='Titulo')),
                ('description', models.TextField(max_length=100, verbose_name='Descricao')),
                ('date_begin', models.DateTimeField(verbose_name='Data de Inicio')),
                ('date_end', models.DateTimeField(verbose_name='Data de Fim')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('status', models.CharField(blank=True, choices=[('Em andamento', 'Em andamento'), ('Finalizado', 'Finalizado'), ('Cancelado', 'Cancelado')], default='Em andamento', max_length=20, null=True, verbose_name='Status')),
                ('initial_value', models.FloatField(blank=True, default=0.0, null=True, verbose_name='Preco Inicial')),
                ('auctioneer', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='auctioneer.auctioneer')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='user.user')),
            ],
            options={
                'verbose_name': 'Leilao',
                'verbose_name_plural': 'Leiloes',
                'ordering': ['id'],
            },
        ),
    ]
