# Generated by Django 6.0.4 on 2026-05-29 00:49

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auction', '0002_remove_auction_user'),
        ('auctionitem', '0002_rename_subtotal_auctionitem_sub_total_and_more'),
        ('user', '0003_user_balance_user_reputation'),
    ]

    operations = [
        migrations.CreateModel(
            name='AuctionBid',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('value', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Valor')),
                ('status', models.CharField(choices=[('P', 'Pendente'), ('A', 'Aceito'), ('R', 'Recusado')], default='P', max_length=1, verbose_name='Status')),
                ('auction', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='bids', to='auction.auction')),
                ('auctionitem', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='auction_bids', to='auctionitem.auctionitem')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='auction_bids', to='user.user')),
            ],
            options={
                'verbose_name': 'Lance',
                'verbose_name_plural': 'Lances',
                'ordering': ['id'],
            },
        ),
    ]
