# Generated by Django 6.0.4 on 2026-05-27 21:52

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auction', '__first__'),
        ('user', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Payment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('total', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Valor total')),
                ('date_payment', models.DateField(auto_now_add=True, verbose_name='Data do pagamento')),
                ('payment_method', models.CharField(choices=[('C', 'Cartão de Crédito'), ('D', 'Débito'), ('P', 'Pix'), ('B', 'Boleto')], max_length=50, verbose_name='Método de pagamento')),
                ('payment_status', models.CharField(choices=[('P', 'Pendente'), ('C', 'Concluído'), ('F', 'Falhado')], max_length=20, verbose_name='Status do pagamento')),
                ('auction', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='payment', to='auction.auction')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='payments', to='user.user')),
            ],
            options={
                'verbose_name': 'Pagamento',
                'verbose_name_plural': 'Pagamentos',
                'ordering': ['id'],
            },
        ),
    ]
