@startuml SistemaLeilao


class Category{
 -name: Char
 -description: Text
 -status: Boolean
 +toString()
}


class Iten{
 -name: Char
 -description: Text
 -state: CharChoices
 -price: Float
 -photo: Image
 -category: ForeignKey[Category]
 +toString()
}


class User{
 -id: Char
 -balance: Float
 -reputation: Float
 -gender: CharChoices
 +toString()
}


class Auctioneer{
 -company: Char
 -evaluation: Float
 -commission: Float
 -status: Boolean
 +toString()
}

class Person{
 -name: Char
 -email: Email
 -password: Char
 -phone: Char
 -date_sign: DateTime
 +toString()
}

class Auction{
 -title: Char
 -description: Text
 -date_begin: DateTime
 -date_end: DateTime
 -status: CharChoices
 -initial_value: Float
 -iten: ForeignKey[Iten]
 -auctioneer: ForeignKey[Auctioneer]
 +toString()
}

class AuctionIten{
 -quant: Int
 -value: Float
 -sub_total: Float
 -iten: ForeignKey[Iten]
 -auction: ForeignKey[Auction]
 +toString()
}


class AuctionBid{
 -value: Decimal
 -status: CharChoices
 -user: ForeignKey[User]
 -auctioniten: ForeignKey[AuctionIten]
 +toString()
 +end_bid()
}


class Payment{
 -total: Float
 -payment_mode: CharChoices
 -status: CharChoices
 -data_payment: DateTime
 -user: ForeignKey[User]
 +toString()
}


class Notification{
 -title: Char
 -mesage: Text
 -type: CharChoices
 -date_sent: DateTime
 -user: ForeignKey[User]
 +toString()
}

Iten <--* Category : 1..n
Iten *--> AuctionIten : 1..n
Auction *--> AuctionIten : 1..n
Auction *--> AuctionBid : 1..n
User *--> AuctionBid : 1..n
AuctionBid *--> Payment : 1..n
Auctioneer *--> Auction : 1..n
User *--> Notification : 0..n
User -up-|> Person : 1..1
Auctioneer -up-|> Person : 1..1


@enduml